---
source: hydroflow_plus/src/persist_pullup.rs
expression: built.ir()
---
[
    ForEach {
        f: stageleft :: runtime_support :: fn1_type_hint :: < i32 , () > ({ use crate :: __staged :: persist_pullup :: tests :: * ; | n | println ! ("{}" , n) }),
        input: Unpersist(
            Persist(
                Map {
                    f: stageleft :: runtime_support :: fn1_type_hint :: < i32 , i32 > ({ use crate :: __staged :: persist_pullup :: tests :: * ; | v | v + 1 }),
                    input: Tee {
                        inner: <tee>: Persist(
                            Unpersist(
                                Persist(
                                    Source {
                                        source: Iter(
                                            { use crate :: __staged :: persist_pullup :: tests :: * ; 0 .. 10 },
                                        ),
                                        location_kind: Process(
                                            0,
                                        ),
                                    },
                                ),
                            ),
                        ),
                    },
                },
            ),
        ),
    },
    ForEach {
        f: stageleft :: runtime_support :: fn1_type_hint :: < i32 , () > ({ use crate :: __staged :: persist_pullup :: tests :: * ; | n | println ! ("{}" , n) }),
        input: Unpersist(
            Persist(
                Map {
                    f: stageleft :: runtime_support :: fn1_type_hint :: < i32 , i32 > ({ use crate :: __staged :: persist_pullup :: tests :: * ; | v | v + 1 }),
                    input: Tee {
                        inner: <tee>: Persist(
                            Unpersist(
                                Persist(
                                    Source {
                                        source: Iter(
                                            { use crate :: __staged :: persist_pullup :: tests :: * ; 0 .. 10 },
                                        ),
                                        location_kind: Process(
                                            0,
                                        ),
                                    },
                                ),
                            ),
                        ),
                    },
                },
            ),
        ),
    },
]
